@@ -1,3 +1,4 @@
+2123 [Log] use system default encoding for AviSynth input script
 2122 [Progress Window] added job name. Feature request #3488205
 2121 [Audio Encoder] Import() will be used for AVS input files. Bug #3506283
 2120 [MKV Muxer] improved handling of empty IDX subtitle files
